# video-to-article

./: .gitignore  LICENSE  README.md  config.example.json  gui_app.py  pyproject.toml  requirements.txt  run_gui.bat  transcribe.py
docs/: git-clean-contributors.md
ffmpeg/: README.txt
packaging/: bundle_ffmpeg.py  gui_entry.py  installer.iss  make_models_funasr_zip.py  make_release_zip.py  models_funasr_README.txt  pyi_rth_app_root.py  user_README.txt  video_to_article_gui.spec  write_dist_meta.py
prompts/articles/: README.md  snack_recipe.md
prompts/system/: README.md
scripts/: build_gui_onedir.ps1
src/video_to_article/: __init__.py  batch.py  blog.py  cli.py  config.py  cover.py  data_paths.py  logging_config.py  output_manager.py  paths.py  platforms.py  processor.py  prompts.py  text_utils.py
src/video_to_article/gui/: __init__.py  app.py  branding.py  cli_builder.py  log_bridge.py  main_window.py  theme_style.py  workers.py
src/video_to_article/gui/modes/: __init__.py  batch_page.py  download_page.py  placeholder_page.py  search_page.py  single_page.py  tools_page.py
src/video_to_article/gui/settings/: settings_dialog.py
src/video_to_article/gui/state/: __init__.py  prefs.py
src/video_to_article/gui/widgets/: common_options.py  job_table.py  layout_utils.py  log_panel.py
src/video_to_article/media/: __init__.py  audio.py  download.py  ffmpeg_tools.py  thumbnails.py
src/video_to_article/providers/: bilibili.py  llm.py  subtitles.py  youtube.py  youtube_auth.py  ytdlp_common.py
