[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-article"
version = "0.4.5"
description = "Video transcription and snack recipe summarization toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "modelscope>=1.0.0",
    "funasr>=1.2.0",
    "more-itertools>=10.0.0",
    "opencc-python-reimplemented",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
bilibili = ["bilibili-api-python"]
gui = ["PySide6>=6.6", "PySide6-Fluent-Widgets>=1.6"]
packaging = ["pyinstaller>=6.0"]
dev = []

[project.scripts]
video-to-article = "video_to_article.cli:main"
video-to-article-gui = "video_to_article.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
